fix(dashboard): adjust noOrders styles for better alignment and readability

--- a/src/styles/pages/dashboard.module.scss
+++ b/src/styles/pages/dashboard.module.scss
@@ -221,10 +221,8 @@
 }
 
 .noOrders {
-  text-align: center;
   font-size: 1.2rem;
   color: #999;
-  grid-column: 1 / -1;
   padding: 3rem;
   display: flex;
   text-align: center;
@@ -245,6 +243,7 @@
   color: $color-light-blue;
   vertical-align: middle;
   margin: 0 0.5rem;
+  line-height: 1rem;
 }
 
 .sandwichCard {
